# tinytag

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  release.py  runtests.py  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md.license  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  feature_request.md.license
.github/workflows/: build.yml  reuse.yml  tests.yml
tinytag/: __init__.py  __main__.py  tinytag.py  tinytag.pyi
tinytag/test/: __init__.py  test_tinytag.py
tinytag/test/samples/: longer_flac.flac
tinytag/tests/: please download the test samples from github.txt  test.py  test_all.py  test_cli.py
tinytag/tests/custom_samples/: instructions.txt
tinytag/tests/samples/: 8khz_5s.opus  M1F1-mulawC-AFsp.afc  REUSE.toml  aiff_extra_tags.aiff  aiff_with_image.aiff  alac_file.m4a  ape-44100-16-1.ape  bitrate_present.spx  classical.m4a  detect_flac.x  detect_mp3_fffb.x  detect_mp4_m4a.x  detect_ogg.x  detect_wav.x  detect_wma.x  empty_custom_field.m4a  flac1.5sStereo.flac  flac453sStereo.flac  flac_invalid_track_number.flac  flac_multiple_fields.flac  flac_with_image.flac  grouping.wma  ilbm.aiff  invalid_block_sizes.flac  invalid_object_size.wma  invalid_sample_rate.aiff  invalid_second_streaminfo.flac  iso8859_with_image.m4a  lossless.wma  magic_header_only_aiff.x  magic_header_only_mp4.x  magic_header_only_ogg.x  magic_header_only_wav.x  magic_header_only_wma.x  mixed_case_atoms.m4a  mp3_audio.m4a  mp4_extended_size.m4a  mp4_extended_size_truncated.m4a  mp4_genre_priority.m4a  mp4_short_trkn.m4a  (+39 more)
