# SPDX-FileCopyrightText: 2024 tinytag Contributors
# SPDX-License-Identifier: MIT

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "tinytag"
version = "2.1.1"
description = "Read audio file metadata"
authors = [
    {name = "Tom Wallroth"},
    {name = "Mat (mathiascode)"}
]
keywords = [
    "metadata",
    "audio",
    "music",
    "mp3",
    "m4a",
    "wav",
    "ogg",
    "opus",
    "flac",
    "wma",
    "aiff"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Typing :: Typed"
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/tinytag/tinytag"

[project.optional-dependencies]
tests = [
    "coverage",
    "mypy",
    "pycodestyle",
    "pylint"
]

[tool.flit.sdist]
exclude = [
    ".gitignore",
    ".github/",
    "tinytag/icons/",
    "tinytag/tests/"
]

[tool.pylint.master]
disable = [
    "invalid-name",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-nested-blocks",
    "too-many-return-statements",
    "too-many-statements",
    "too-few-public-methods",
    "unknown-option-value"
]
enable = [
    "consider-using-augmented-assign"
]
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docstyle",
    "pylint.extensions.dunder",
    "pylint.extensions.empty_comment",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing"
]
py-version = "3.7"

[tool.mypy]
strict = true
