[metadata]
name = tinytag
author = Tom Wallroth
author_email = tomwallroth@gmail.com
url = https://github.com/devsnd/tinytag
description = Read music meta data and length of MP3, OGG, OPUS, MP4, M4A, FLAC, WMA and Wave files
keywords =
  metadata
  music
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 2.7
include_package_data = True
packages = find:
install_requires =

[options.extras_require]
tests =
  pytest
  pytest-cov
  flake8

[options.entry_points]
console_scripts =

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/,src/

[coverage:run]
cover_pylib = false
omit =
  */site-packages/*
  */bin/*
  */src/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
