[metadata]
name = tinytag
version = 2.0.0
author = Tom Wallroth
author_email = tomwallroth@gmail.com
url = https://github.com/devsnd/tinytag
description = Read music meta data and length of MP3, OGG, OPUS, MP4, M4A, FLAC, WMA and Wave files
keywords =
  metadata
  music
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =

[options.extras_require]
tests =
  pycodestyle
  pylint
  pytest
  pytest-cov

[options.entry_points]
console_scripts =

[pycodestyle]
max-line-length = 100
exclude = build/

[pylint.master]
disable =
    bad-plugin-value
enable =
    consider-using-augmented-assign,
    use-implicit-booleaness-not-comparison-to-string
load-plugins =
    pylint.extensions.bad_builtin,
    pylint.extensions.check_elif,
    pylint.extensions.code_style,
    pylint.extensions.comparison_placement,
    pylint.extensions.consider_refactoring_into_while_condition,
    pylint.extensions.emptystring,
    pylint.extensions.for_any_all,
    pylint.extensions.dict_init_mutate,
    pylint.extensions.dunder,
    pylint.extensions.eq_without_hash,
    pylint.extensions.overlapping_exceptions,
    pylint.extensions.private_import,
    pylint.extensions.set_membership,
    pylint.extensions.typing
ignore-paths = build
py-version = 3.7

[pylint.format]
max-line-length = 100

[mypy]
strict = True
